# TPE-Protos

./: .deepsource.toml  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  server
docs/: protocol.md
src/: CMakeLists.txt  CTestTestfile.cmake  Makefile  args.c  cmake_install.cmake  emalloc.c  logger.c  main.c  manager_client.c  netutils.c  parser.c  pop3.c  queue.c  selector.c
src/include/: args.h  buffer.h  commands_parser.h  definitions.h  emalloc.h  file_handlers.h  file_parser.h  logger.h  macros.h  management_handler.h  manager_client.h  manager_protocol.h  metrics.h  netutils.h  parser.h  pop3.h  pop3_commands.h  pop3_files.h  pop3server.h  queue.h  users.h  util.h
src/manager/: management_handler.c  manager_protocol.c
src/parsers/: commands_parser.c  file_parser.c  parser.c  parser_utils.c
src/util/: args.c  buffer.c  emalloc.c  file_handlers.c  logger.c  metrics.c  netutils.c  pop3_commands.c  pop3_files.c  queue.c  selector.c  users.c  util.c
test/: CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  add_user.sh  buffer_test.c  cmake_install.cmake  commands_parser_test.c  connections.sh  connections_test.c  ipv6.sh  mail_dir.sh  manager_protocol_test.c  parser_test.c  parser_utils_test.c  pipelining.sh  queue_test.c  remove_first_line.sh  remove_test_folders.sh  selector_test.c  users_test.c  util_test.c
tests/: selector_test.c
